css/styles.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  background: linear-gradient(rgb(133, 189, 199), rgb(28, 72, 80)) ;
  color: #fff;
  height: 100%;
  width: 100%;
}

.container {
width: 500px;
max-width: 75vw;
margin: 10vmin auto;
text-align: center;
padding: 30px;
background: linear-gradient(rgb(182, 132, 83), rgb(164, 112, 60)) ;
border-radius: 10px;
box-shadow: 1px 1px 7px #000;
} 

h1 {
  margin-top: -15px;
  font-family: "Dancing Script", cursive;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-size: 2.4rem;
}

#catPhoto {
  margin-top: 5px;
}

#catPhoto img {
  max-width: 100%;
  max-height: 400px;
  border-radius: 10px;
  box-shadow: 1px 1px 7px #000;
}

button {
  background-color:pink;
  border: none;
  padding: 10px 20px;
  margin-top: 18px;
  font-family: "Dancing Script", cursive;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-size: 1.2rem;
  border-radius: 10px;
  box-shadow: 1px 1px 7px #000;
  color: #000;
}

.sun {
  height: 50vmin;
  width: 50vmin;
  background-color: rgb(251, 239, 125);
  border-radius: 50%;
  position: fixed;
  top: -20px;
  right: 10%;
  z-index: -5;
  box-shadow: 10px 10px 300px rgb(251, 239, 125);
}

